The Major Update

--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,26 @@
     </nav>
 
     <section class="contact-section">
-        <h1>Contact Me</h1>
-        <p>Email: vansh@example.com</p>
+        <h1>GitHub</h1>
+        <p>This is my GitHub profile.<br>Visit it and give me feedback</p>
+        <a href="https://github.com/Madboy11">MadBoy11</a>
+    </section>
+    <section class="contact-section">
+        <h1>Email</h1>
+        <p>This is a dummy Email.<br>If you really want to contact me check out Instagram or Discord</p>
+        <a href="mailto:vansh@example.com">vansh@example.com</a>
+    </section>
+    <section class="contact-section">
+        <h1>Mobile</h1>
+        <p>This is also a dummy Mobile number.</p>
+        <a href="tel:+91 9909080706">+91 9909080706</a>
+    </section>
+    <section class="contact-section">
+        <h1>Instagram</h1>
+        <a href="https://instagram.com/roronoa_vansh">@Roronoa_Vansh</a>
     </section>
     <footer>
-        <p>Thank you for visiting! Follow me on <a href="https://instagram.com/yourhandle" target="_blank">Instagram</a>.</p>
+        <p>Thank you for visiting! Follow me on <a href="https://instagram.com/roronoa_vansh" target="_blank">Instagram</a>.</p>
     </footer>
     <script src="scripts/main.js"></script>
 </body>
