--- a/projects.html
+++ b/projects.html
@@ -20,30 +20,17 @@
 
     <!-- Projects Gallery -->
     <section class="gallery">
-        <div class="gallery-item" style="background-image: url('path/to/image1.jpg');">
+        <div class="gallery-item" style="background-image: url('Images/Project1.png');">
             <div class="overlay">
-                <h2>Project 1</h2>
-                <p>This is a brief description of Project 1. It showcases XYZ functionality.</p>
-                <a href="#" class="project-link">View Details</a>
+                <h2>CSE Quiz</h2>
+                <p>This is a CSE Quiz web page.It contain 15 question.</p>
+                <a href="https://madboy11.github.io/PU-Quiz-Web-app/" class="project-link">View Details</a>
             </div>
-        </div>
-        <div class="gallery-item" style="background-image: url('path/to/image2.jpg');">
-            <div class="overlay">
-                <h2>Project 2</h2>
-                <p>This is a brief description of Project 2. It focuses on ABC feature.</p>
-                <a href="#" class="project-link">View Details</a>
-            </div>
-        </div>
-        <div class="gallery-item" style="background-image: url('path/to/image3.jpg');">
-            <div class="overlay">
-                <h2>Project 3</h2>
-                <p>This is a brief description of Project 3. A modern approach to DEF.</p>
-                <a href="#" class="project-link">View Details</a>
-            </div>
+        </div>    
         </div>
     </section>
     <footer>
-        <p>Thank you for visiting! Follow me on <a href="https://instagram.com/yourhandle" target="_blank">Instagram</a>.</p>
+        <p>Thank you for visiting! Follow me on <a href="https://instagram.com/roronoa_vansh" target="_blank">Instagram</a>.</p>
     </footer>
     <script src="scripts/main.js"></script>
 </body>
