Path is updated

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </div>
         
         <div class="card">
-            <img  style="border-radius: 10px;" width=auto height="100%" src="/Images/Homeimage.jpg" alt="My Image">
+            <img  style="border-radius: 10px;" width=auto height="100%" src="Images/Homeimage.jpg" alt="My Image">
         </div>
         <div class="card">
-            <img  style="border-radius: 10px;" width=auto height="100%" src="/Images/Homeimage1.jpg" alt="My Image">
+            <img  style="border-radius: 10px;" width=auto height="100%" src="Images/Homeimage1.jpg" alt="My Image">
         </div>
         
     </section>
